# DevMindAI

./: .env  README.md  pyproject.toml
src/devmind_ai/: main.py
src/devmind_ai/config/: settings.py
src/devmind_ai/services/: gemini.py
src/devmind_ai/ui/views/: main_window.py  styles.py
