[project]
name = "devmindai"
version = "0.1.0"
description = "Assistente desktop para desenvolvedores com IA e RAG"
authors = [
    {name = "Cayo Garcia", email = "cayo.garcia@sincsuite.com.br"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "pyside6 (>=6.11.1,<7.0.0)",
    "google-genai (>=2.10.0,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pyinstaller (>=6.21.0,<7.0.0)"
]
